:doctitle: eProcurement Ontology
:doccode: epo-main-prod-002
:page-name: release-notes
:author: NPJ
:authoremail: nicole-anne.paterson-jones@ext.ec.europa.eu
:docdate: June 2023

include::partial$latest_fix.adoc[]

== *Release notes 3.1.0*

The release of version 3.1.0 and its corresponding technical files can be found link:https://github.com/OP-TED/ePO/tree/v3.1.0[here].


|===
|*Metadata*|*Value*

|Reference ePO version|3.0.1
|Target ePO version|3.1.0
|Authors|Andreea Pasăre, Eugeniu Costetchi
|Date|2022-12-16
|===

* Development of a new module, eOrdering
* The prefix used for the eOrdering module is “epo-ord”
* Included notice systematisation in eNotice module
* Changes to Procurement Object classes and attributes (Procedure, PlannedProcurementPart, Lot)
* Roles hierarchy restructure
* model2owl (uml2owl) updates:
** Combined glossary
** Providing Turtle output files
** Implemented metadata management mechanism
* https://github.com/OP-TED/ePO/issues[GitHub issues] revision and labelling
* GitHub issue fixes for the https://github.com/OP-TED/ePO/milestone/1[Q4 2022 milestone]
* Updates for standard forms mappings - TED-RDF-mapping


== New classes

=== ePO core

* epo:AcquiringParty
* epo:AuxiliaryParty
* epo:LeadBuyer
* epo:OtherEntity
* epo:ProcurementElement
* owl:Thing

== Deleted classes

=== ePO core

* epo:BuyerSideSignatory
* epo:ContractSignatory
* epo:ContractorSideSignatory
* epo:GroupLeader
* epo:InformationProvider
* epo:PrimaryRole
* epo:SecondaryRole
* epo:TertiaryRole

== New controlled vocabularies

=== ePO core

* at-voc:cpvsuppl
* at-voc:review-decision-type (renamed from at-voc:decision-type)
* at-voc:remedy-type (renamed from at-voc:review-remedy-type)
* at-voc-new:evaluation-group-type (changed prefix from epo:)
* at-voc-new:legal-regime (changed prefix from epo:)
* at-voc-new:notification-phases-content-types (changed prefix from epo:)

=== eCatalogue

* at-voc-new:price-type
* at-voc-new:document-type

== Deleted controlled vocabularies
