@@ -9,7 +9,9 @@
 //:page-aliases: 3.1.0@business.adoc
 //endif::[]
 
-include::partial$latest_fix.adoc[]
+ifeval::[{epo_latest_version} == {page-component-version}]
+:page-aliases: {page-component-version}@{page-component-name}.adoc
+endif::[]
 
 :sectnums:
 :toc:
